# snake-game

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-ci.yml
snake_game/: __main__.py  config.py  persistence.py  types.py
snake_game/core/: collision.py  food.py  game.py  input.py  renderer.py  snake.py
